added process.env.port to server.js

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <h3>Drag the images to re-arrange in an order that makes sence to you.</h3>
         <hr />
     </div>
-    <script src='bundle.js'></script>
+    <script src='./bundle.js'></script>
 </body>
 </html>
