final deployment ot heroku

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id='app' class="text-center">
-        <h3>Drag the images to re-arrange in an order that makes sence to you.</h3>
+        <h3>Drag and drop images to re-arrange in a different order.</h3>
         <hr />
     </div>
     <script src='./bundle.js'></script>
