--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <h3>Drag and drop images to re-arrange in a different order.</h3>
         <hr />
     </div>
-    <script src='./bundle.js'></script>
+    <script src='bundle.js'></script>
 </body>
 </html>
